--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
       <!-- what we are doing -->
 
-      <section class="section">
+      <section>
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="list work-examples">
