--- a/portfolio.html
+++ b/portfolio.html
@@ -22,171 +22,181 @@
 
   <body>
     <!-- header -->
-    <header>
-      <nav>
-        <a class="logo list link" href="./index.html"
-          >Web<span class="accent">Studio</span></a
-        >
+    <header class="page-header">
+      <div class="container">
+        <nav>
+          <a class="logo list link" href="./index.html"
+            >Web<span class="accent">Studio</span></a
+          >
 
-        <ul class="site-nav list">
-          <li>
-            <a href="./index.html" class="link-navigation link">Studio</a>
-          </li>
-          <li>
-            <a href="./portfolio.html" class="link-navigation link"
-              >Portfolio</a
-            >
-          </li>
-          <li><a href="" class="link-navigation link">Contacts</a></li>
-        </ul>
-      </nav>
+          <ul class="site-nav list">
+            <li>
+              <a href="./index.html" class="link-navigation link">Studio</a>
+            </li>
+            <li>
+              <a href="./portfolio.html" class="link-navigation link"
+                >Portfolio</a
+              >
+            </li>
+            <li><a href="" class="link-navigation link">Contacts</a></li>
+          </ul>
+        </nav>
 
-      <address class="contact-list">
-        <ul class="list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="link-contacts link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="link-contacts link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+        <address class="contact-list">
+          <ul class="list contacts-container">
+            <li>
+              <a href="mailto:info@devstudio.com" class="link-contacts link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="link-contacts link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <!-- main -->
 
     <main>
       <!-- buttoms -->
-      <section class="section">
-        <h1 hidden class="main-title">What are we doing</h1>
-        <ul class="list">
-          <li>
-            <button type="button" class="button primary">All</button>
-          </li>
-          <li>
-            <button type="button" class="button primary">Web Site</button>
-          </li>
-          <li><button type="button" class="button primary">App</button></li>
-          <li>
-            <button type="button" class="button primary">Design</button>
-          </li>
-          <li>
-            <button type="button" class="button primary">Marketing</button>
-          </li>
-        </ul>
+      <section>
+        <div class="container">
+          <h1 hidden class="main-title">What are we doing</h1>
+          <ul class="list buttoms-list">
+            <li>
+              <button type="button" class="button primary">All</button>
+            </li>
+            <li>
+              <button type="button" class="button primary">Web Site</button>
+            </li>
+            <li><button type="button" class="button primary">App</button></li>
+            <li>
+              <button type="button" class="button primary">Design</button>
+            </li>
+            <li>
+              <button type="button" class="button primary">Marketing</button>
+            </li>
+          </ul>
 
-        <!-- portfolio -->
+          <!-- portfolio -->
 
-        <ul class="list">
-          <li>
-            <a href="#" class="link">
-              <img
-                src="./images/img5.jpg"
-                alt="Mobile applications"
-                width="360"
-              />
-              <h2 class="card-title">Banking App Interface Concept</h2>
-              <p class="card-text">App</p>
-            </a>
-          </li>
+          <ul class="list portfolio-list">
+            <li>
+              <a href="#" class="link">
+                <img
+                  src="./images/img5.jpg"
+                  alt="Mobile applications"
+                  width="360"
+                />
+                <h2 class="card-title">Banking App Interface Concept</h2>
+                <p class="card-text">App</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="#" class="link">
-              <img
-                src="./images/img6.jpg"
-                alt="Payment with mobile"
-                width="360"
-              />
-              <h2 class="card-title">Cashless Payment</h2>
-              <p class="card-text">Marketing</p>
-            </a>
-          </li>
+            <li>
+              <a href="#" class="link">
+                <img
+                  src="./images/img6.jpg"
+                  alt="Payment with mobile"
+                  width="360"
+                />
+                <h2 class="card-title">Cashless Payment</h2>
+                <p class="card-text">Marketing</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="#" class="link">
-              <img
-                src="./images/img7.jpg"
-                alt="Notebook and mobilephone"
-                width="360"
-              />
-              <h2 class="card-title">Meditation App</h2>
-              <p class="card-text">App</p>
-            </a>
-          </li>
+            <li>
+              <a href="#" class="link">
+                <img
+                  src="./images/img7.jpg"
+                  alt="Notebook and mobilephone"
+                  width="360"
+                />
+                <h2 class="card-title">Meditation App</h2>
+                <p class="card-text">App</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="#" class="link">
-              <img src="./images/img8.jpg" alt="Car wheel" width="360" />
-              <h2 class="card-title">Taxi Service</h2>
-              <p class="card-text">Marketing</p>
-            </a>
-          </li>
+            <li>
+              <a href="#" class="link">
+                <img src="./images/img8.jpg" alt="Car wheel" width="360" />
+                <h2 class="card-title">Taxi Service</h2>
+                <p class="card-text">Marketing</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="#" class="link">
-              <img
-                src="./images/img9.jpg"
-                alt="screen with picture"
-                width="360"
-              />
-              <h2 class="card-title">Screen Illustrations</h2>
-              <p class="card-text">Design</p>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="link">
-              <img
-                src="./images/img10.jpg"
-                alt="smiling woman with mobilephone"
-                width="360"
-              />
-              <h2 class="card-title">Online Courses</h2>
-              <p class="card-text">Marketing</p>
-            </a>
-          </li>
+            <li>
+              <a href="#" class="link">
+                <img
+                  src="./images/img9.jpg"
+                  alt="screen with picture"
+                  width="360"
+                />
+                <h2 class="card-title">Screen Illustrations</h2>
+                <p class="card-text">Design</p>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="link">
+                <img
+                  src="./images/img10.jpg"
+                  alt="smiling woman with mobilephone"
+                  width="360"
+                />
+                <h2 class="card-title">Online Courses</h2>
+                <p class="card-text">Marketing</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="#" class="link">
-              <img src="./images/img11.jpg" alt="instagram pages" width="360" />
-              <h2 class="card-title">Instagram Stories Concept</h2>
-              <p class="card-text">Design</p>
-            </a>
-          </li>
-          <li>
-            <a href="#" class="link">
-              <img
-                src="./images/img12.jpg"
-                alt="bag with vegetables"
-                width="360"
-              />
-              <h2 class="card-title">Organic Food</h2>
-              <p class="card-text">Web Site</p>
-            </a>
-          </li>
+            <li>
+              <a href="#" class="link">
+                <img
+                  src="./images/img11.jpg"
+                  alt="instagram pages"
+                  width="360"
+                />
+                <h2 class="card-title">Instagram Stories Concept</h2>
+                <p class="card-text">Design</p>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="link">
+                <img
+                  src="./images/img12.jpg"
+                  alt="bag with vegetables"
+                  width="360"
+                />
+                <h2 class="card-title">Organic Food</h2>
+                <p class="card-text">Web Site</p>
+              </a>
+            </li>
 
-          <li>
-            <a href="#" class="link">
-              <img src="./images/img14.jpg" alt="cappuchino" width="360" />
-              <h2 class="card-title">Fresh Coffee</h2>
-              <p class="card-text">Web Site</p>
-            </a>
-          </li>
-        </ul>
+            <li>
+              <a href="#" class="link">
+                <img src="./images/img14.jpg" alt="cappuchino" width="360" />
+                <h2 class="card-title">Fresh Coffee</h2>
+                <p class="card-text">Web Site</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <!-- footer -->
     <footer class="footer-style">
-      <a class="footer-logo link" href="./index.html"
-        >Web<span class="footer-accent">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="footer-logo link" href="./index.html"
+          >Web<span class="footer-accent">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
