--- a/index.html
+++ b/index.html
@@ -25,38 +25,39 @@
 
     <header class="page-header">
       <div class="container">
-        <nav>
+        <nav class="navigation">
           <a class="logo list link" href="./index.html"
             >Web<span class="accent">Studio</span></a
           >
-
           <ul class="site-nav list">
-            <li>
+            <li class="item">
               <a href="./index.html" class="link-navigation link">Studio</a>
             </li>
-            <li>
+            <li class="item">
               <a href="./portfolio.html" class="link-navigation link"
                 >Portfolio</a
               >
             </li>
-            <li><a href="" class="link-navigation link">Contacts</a></li>
+            <li class="item">
+              <a href="" class="link-navigation link">Contacts</a>
+            </li>
           </ul>
-        </nav>
 
-        <address class="contact-list">
-          <ul class="list contacts-container">
-            <li>
-              <a href="mailto:info@devstudio.com" class="link-contacts link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a href="tel:+110001111111" class="link-contacts link"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
+          <address class="contact-list">
+            <ul class="list contacts-box">
+              <li class="item">
+                <a href="mailto:info@devstudio.com" class="link-contacts link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="item">
+                <a href="tel:+110001111111" class="link-contacts link"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </nav>
       </div>
     </header>
 
@@ -74,30 +75,30 @@
 
       <section class="section no-padding">
         <div class="container">
-          <h2 class="section-title" hidden>Values</h2>
+          <h2 class="section-title visually-hidden" hidden>Values</h2>
           <ul class="list values">
-            <li>
+            <li class="item">
               <h3 class="title">Strategy</h3>
               <p class="text-value">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title">Punctuality</h3>
               <p class="text-value">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title">Diligence</h3>
               <p class="text-value">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="item">
               <h3 class="title">Technologies</h3>
               <p class="text-value">
                 Design practice focused on digital experiences. We bring forth a
@@ -114,13 +115,13 @@
         <div class="container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="list work-examples">
-            <li>
+            <li class="item">
               <img src="./images/Rectangle71.jpg" alt="web sites" width="360" />
             </li>
-            <li>
+            <li class="item">
               <img src="./images/Rectangle72.jpg" alt="web sites" width="360" />
             </li>
-            <li>
+            <li class="item">
               <img
                 src="./images/Rectangle73.jpg"
                 alt="copywriting"
