--- a/portfolio.html
+++ b/portfolio.html
@@ -24,40 +24,42 @@
     <!-- header -->
     <header class="page-header">
       <div class="container">
-        <nav>
+        <nav class="navigation">
           <a class="logo list link" href="./index.html"
             >Web<span class="accent">Studio</span></a
           >
-
           <ul class="site-nav list">
-            <li>
+            <li class="item">
               <a href="./index.html" class="link-navigation link">Studio</a>
             </li>
-            <li>
+            <li class="item">
               <a href="./portfolio.html" class="link-navigation link"
                 >Portfolio</a
               >
             </li>
-            <li><a href="" class="link-navigation link">Contacts</a></li>
+            <li class="item">
+              <a href="" class="link-navigation link">Contacts</a>
+            </li>
           </ul>
-        </nav>
 
-        <address class="contact-list">
-          <ul class="list contacts-container">
-            <li>
-              <a href="mailto:info@devstudio.com" class="link-contacts link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a href="tel:+110001111111" class="link-contacts link"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
+          <address class="contact-list">
+            <ul class="list contacts-box">
+              <li class="item">
+                <a href="mailto:info@devstudio.com" class="link-contacts link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="item">
+                <a href="tel:+110001111111" class="link-contacts link"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </nav>
       </div>
     </header>
+
     <!-- main -->
 
     <main>
