--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
       <!-- buttoms -->
       <section class="section">
         <div class="container">
-          <h1 hidden class="main-title">What are we doing</h1>
+          <h1 class="main-title visually-hidden">What are we doing</h1>
           <ul class="list buttoms-list">
             <li class="item">
               <button type="button" class="button primary">All</button>
