--- a/index.html
+++ b/index.html
@@ -139,24 +139,32 @@
           <ul class="list team-list">
             <li class="team-card">
               <img src="./images/img.jpg" alt="Man with beard" width="264" />
-              <h3 class="team-name">Mark Guerrero</h3>
-              <p class="team-text">Product Designer</p>
+              <div class="team-details">
+                <h3 class="team-name">Mark Guerrero</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-card">
               <img src="./images/img-2.jpg" alt="Smiling man" width="264" />
-              <h3 class="team-name">Tom Ford</h3>
-              <p class="team-text">Frontend Developer</p>
+              <div class="team-details">
+                <h3 class="team-name">Tom Ford</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
             </li>
 
             <li class="team-card">
               <img src="./images/img-3.jpg" alt="Young woman" width="264" />
-              <h3 class="team-name">Camila Garcia</h3>
-              <p class="team-text">Marketing</p>
+              <div class="team-details">
+                <h3 class="team-name">Camila Garcia</h3>
+                <p class="team-text">Marketing</p>
+              </div>
             </li>
             <li class="team-card">
               <img src="./images/img-4.jpg" alt="Young man" width="264" />
-              <h3 class="team-name">Daniel Wilson</h3>
-              <p class="team-text">UI Designer</p>
+              <div class="team-details">
+                <h3 class="team-name">Daniel Wilson</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
