--- a/portfolio.html
+++ b/portfolio.html
@@ -94,8 +94,10 @@
                   alt="Mobile applications"
                   width="360"
                 />
-                <h2 class="card-title">Banking App Interface Concept</h2>
-                <p class="card-text">App</p>
+                <div class="portfolio-details">
+                  <h2 class="card-title">Banking App Interface Concept</h2>
+                  <p class="card-text">App</p>
+                </div>
               </a>
             </li>
 
@@ -106,8 +108,10 @@
                   alt="Payment with mobile"
                   width="360"
                 />
-                <h2 class="card-title">Cashless Payment</h2>
-                <p class="card-text">Marketing</p>
+                <div class="portfolio-details">
+                  <h2 class="card-title">Cashless Payment</h2>
+                  <p class="card-text">Marketing</p>
+                </div>
               </a>
             </li>
 
@@ -118,16 +122,20 @@
                   alt="Notebook and mobilephone"
                   width="360"
                 />
-                <h2 class="card-title">Meditation App</h2>
-                <p class="card-text">App</p>
+                <div class="portfolio-details">
+                  <h2 class="card-title">Meditation App</h2>
+                  <p class="card-text">App</p>
+                </div>
               </a>
             </li>
 
             <li class="portfolio-item">
               <a href="#" class="link">
                 <img src="./images/img8.jpg" alt="Car wheel" width="360" />
-                <h2 class="card-title">Taxi Service</h2>
-                <p class="card-text">Marketing</p>
+                <div class="portfolio-details">
+                  <h2 class="card-title">Taxi Service</h2>
+                  <p class="card-text">Marketing</p>
+                </div>
               </a>
             </li>
 
@@ -138,8 +146,10 @@
                   alt="screen with picture"
                   width="360"
                 />
-                <h2 class="card-title">Screen Illustrations</h2>
-                <p class="card-text">Design</p>
+                <div class="portfolio-details">
+                  <h2 class="card-title">Screen Illustrations</h2>
+                  <p class="card-text">Design</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
@@ -149,8 +159,10 @@
                   alt="smiling woman with mobilephone"
                   width="360"
                 />
-                <h2 class="card-title">Online Courses</h2>
-                <p class="card-text">Marketing</p>
+                <div class="portfolio-details">
+                  <h2 class="card-title">Online Courses</h2>
+                  <p class="card-text">Marketing</p>
+                </div>
               </a>
             </li>
 
@@ -161,8 +173,10 @@
                   alt="instagram pages"
                   width="360"
                 />
-                <h2 class="card-title">Instagram Stories Concept</h2>
-                <p class="card-text">Design</p>
+                <div class="portfolio-details">
+                  <h2 class="card-title">Instagram Stories Concept</h2>
+                  <p class="card-text">Design</p>
+                </div>
               </a>
             </li>
             <li class="portfolio-item">
@@ -172,16 +186,20 @@
                   alt="bag with vegetables"
                   width="360"
                 />
-                <h2 class="card-title">Organic Food</h2>
-                <p class="card-text">Web Site</p>
+                <div class="portfolio-details">
+                  <h2 class="card-title">Organic Food</h2>
+                  <p class="card-text">Web Site</p>
+                </div>
               </a>
             </li>
 
             <li class="portfolio-item">
               <a href="#" class="link">
                 <img src="./images/img14.jpg" alt="cappuchino" width="360" />
-                <h2 class="card-title">Fresh Coffee</h2>
-                <p class="card-text">Web Site</p>
+                <div class="portfolio-details">
+                  <h2 class="card-title">Fresh Coffee</h2>
+                  <p class="card-text">Web Site</p>
+                </div>
               </a>
             </li>
           </ul>
